<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="5dp">

	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView 
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:padding="0dp" 
			android:text="@string/type" />
		<Spinner
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:paddingTop="2dp"
			android:layout_marginLeft="5dp"
			android:id="@+id/combo_tipos"/>
	</LinearLayout>

	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		
		<TextView 
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:padding="0dp"
			android:text="@string/manufacturer" />
		<AutoCompleteTextView 
			android:id="@+id/autocomplete_manufacturer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView 
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:padding="0dp" 
			android:text="@string/model" />
		<AutoCompleteTextView 
			android:id="@+id/autocomplete_model"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/year_make" />
		<EditText
			android:layout_width="60dp"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginLeft="5dp"
			android:id="@+id/year_make"
			android:maxLength="4"
			android:inputType="number"/>
		<TextView 
			android:layout_width="60dp"
			android:layout_height="wrap_content"
			android:text="@string/year_model" />
		<EditText
			android:layout_width="60dp"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:layout_marginLeft="5dp"
			android:maxLength="4"
			android:inputType="number"
			android:id="@+id/year_model" />
	</LinearLayout>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="80dp"
			android:layout_height="wrap_content" 
			android:text="@string/description" />
		<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:singleLine="true"
			android:id="@+id/description" />
	</LinearLayout>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:gravity="center">
		
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ok"
			android:id="@+id/OkButton" />
		
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:id="@+id/CancelButton"/>

	</LinearLayout>
</LinearLayout>